# todo-surreal-db

./: .env  Cargo.toml
src/: main.rs
src/config/: config.rs  database.rs  mod.rs
src/database/: connection.rs  error.rs  mod.rs
