[package]
name = "todo-imk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
config = "0.15.11"
dotenv = "0.15.0"
envconfig = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.2.1"
thiserror = "1.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
